# humanoid_ws

./: README.md
src/humanoid_control/: CMakeLists.txt  package.xml
src/humanoid_control/config/: controllers.yaml
src/humanoid_description/: CMakeLists.txt  package.xml
src/humanoid_description/urdf/: humanoid.urdf.xacro
src/humanoid_gazebo/: CMakeLists.txt  package.xml
src/humanoid_gazebo/launch/: spawn_humanoid.launch.py
