<?xml version="1.0"?>
<package format="3">
  <name>humanoid_control</name>
  <version>0.0.1</version>
  <description>Minimal humanoid controllers</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>geometry_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
