<?xml version="1.0"?>
<package format="3">
  <name>humanoid_description</name>
  <version>0.0.1</version>
  <description>Minimal humanoid URDF description</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>xacro</depend>
  <depend>urdf</depend>
  <exec_depend>ros2launch</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
