<?xml version="1.0"?>
<package format="3">
  <name>humanoid_gazebo</name>
  <version>0.0.1</version>
  <description>Spawn humanoid in Gazebo</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>gazebo_ros</depend>
  <depend>humanoid_description</depend>
  <depend>humanoid_control</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
